GW-644 Remove AWS SDK2.  Added a simple name contains filter to avoid manual setups such as Amplify, Event Bridge partners, etc.